Convert MAL and AniList links to superscript

--- a/content/blog/bacademy-awards-2025.mdx
+++ b/content/blog/bacademy-awards-2025.mdx
@@ -197,17 +197,17 @@ published: true
 **Nominations**
 
 <ul className="grid grid-cols-1 md:grid-cols-2 gap-x-4 place-items-start">
-    <li>Delicious in Dungeon [<a href="https://myanimelist.net/anime/52701/Dungeon_Meshi" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/153518/Dungeon-Meshi/" target="_blank" rel="noopener noreferrer">AniList</a>\]</li>
+    <li>Delicious in Dungeon <sup>[<a href="https://myanimelist.net/anime/52701/Dungeon_Meshi" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/153518/Dungeon-Meshi/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
 
-    <li>Demon Slayer S4 [<a href="https://myanimelist.net/anime/55701/Kimetsu_no_Yaiba__Hashira_Geiko-hen" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/166240/Kimetsu-no-Yaiba-Hashira-Geikohen" target="_blank" rel="noopener noreferrer">AniList</a>\]</li>
+    <li>Demon Slayer S4 <sup>[<a href="https://myanimelist.net/anime/55701/Kimetsu_no_Yaiba__Hashira_Geiko-hen" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/166240/Kimetsu-no-Yaiba-Hashira-Geikohen" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
     
-    <li>Girls Band Cry [<a href="https://myanimelist.net/anime/55102/Girls_Band_Cry" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/164212/GIRLS-BAND-CRY/" target="_blank" rel="noopener noreferrer">AniList</a>\]</li>
+    <li>Girls Band Cry <sup>[<a href="https://myanimelist.net/anime/55102/Girls_Band_Cry" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/164212/GIRLS-BAND-CRY/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
     
-    <li>Too Many Losing Heroines [<a href="https://myanimelist.net/anime/57524/Make_Heroine_ga_Oosugiru" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/171457/Make-Heroine-ga-Oosugiru/" target="_blank" rel="noopener noreferrer">AniList</a>\]</li>
+    <li>Too Many Losing Heroines <sup>[<a href="https://myanimelist.net/anime/57524/Make_Heroine_ga_Oosugiru" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/171457/Make-Heroine-ga-Oosugiru/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
     
-    <li>Monogatari: Off & Monster Season [<a href="https://myanimelist.net/anime/57864/Monogatari_Series__Off___Monster_Season" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/173533/Monogatari-Series-Off--Monster-Season/" target="_blank" rel="noopener noreferrer">AniList</a>\]</li>
+    <li>Monogatari: Off & Monster Season <sup>[<a href="https://myanimelist.net/anime/57864/Monogatari_Series__Off___Monster_Season" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/173533/Monogatari-Series-Off--Monster-Season/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
     
-    <li>Orb: On the Movements of the Earth [<a href="https://myanimelist.net/anime/52215/Chi_Chikyuu_no_Undou_ni_Tsuite" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/151514/Chi-Chikyuu-no-Undou-ni-Tsuite/" target="_blank" rel="noopener noreferrer">AniList</a>\]</li>
+    <li>Orb: On the Movements of the Earth <sup>[<a href="https://myanimelist.net/anime/52215/Chi_Chikyuu_no_Undou_ni_Tsuite" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/151514/Chi-Chikyuu-no-Undou-ni-Tsuite/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
 </ul>
 
 **Winners**
@@ -334,17 +334,17 @@ published: true
 **Nominations**
 
 <ul className="grid grid-cols-1 md:grid-cols-2 gap-x-4 place-items-start">
-    <li>Black Butler: Public School Arc [<a href="https://myanimelist.net/anime/55855/Kuroshitsuji__Kishuku_Gakkou-hen" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/166715/Kuroshitsuji-Kishuku-Gakkouhen/" target="_blank" rel="noopener noreferrer">AniList</a>\]</li>
+    <li>Black Butler: Public School Arc <sup>[<a href="https://myanimelist.net/anime/55855/Kuroshitsuji__Kishuku_Gakkou-hen" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/166715/Kuroshitsuji-Kishuku-Gakkouhen/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
 
-    <li>Go! Go! Loser Ranger [<a href="https://myanimelist.net/anime/53770/Sentai_Daishikkaku" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/158417/Sentai-Daishikkaku/" target="_blank" rel="noopener noreferrer">AniList</a>\]</li>
+    <li>Go! Go! Loser Ranger <sup>[<a href="https://myanimelist.net/anime/53770/Sentai_Daishikkaku" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/158417/Sentai-Daishikkaku/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
     
-    <li>Monogatari: Off & Monster Season [<a href="https://myanimelist.net/anime/57864/Monogatari_Series__Off___Monster_Season" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/173533/Monogatari-Series-Off--Monster-Season/" target="_blank" rel="noopener noreferrer">AniList</a>\]</li>
+    <li>Monogatari: Off & Monster Season <sup>[<a href="https://myanimelist.net/anime/57864/Monogatari_Series__Off___Monster_Season" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/173533/Monogatari-Series-Off--Monster-Season/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
 
-    <li>Orb: On the Movements of the Earth [<a href="https://myanimelist.net/anime/52215/Chi_Chikyuu_no_Undou_ni_Tsuite" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/151514/Chi-Chikyuu-no-Undou-ni-Tsuite/" target="_blank" rel="noopener noreferrer">AniList</a>\]</li>
+    <li>Orb: On the Movements of the Earth <sup>[<a href="https://myanimelist.net/anime/52215/Chi_Chikyuu_no_Undou_ni_Tsuite" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/151514/Chi-Chikyuu-no-Undou-ni-Tsuite/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
 
-    <li>Re:Zero S3 [<a href="https://myanimelist.net/anime/54857/Re_Zero_kara_Hajimeru_Isekai_Seikatsu_3rd_Season" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/163134/ReZero-kara-Hajimeru-Isekai-Seikatsu-3rd-Season/" target="_blank" rel="noopener noreferrer">AniList</a>\]</li>
+    <li>Re:Zero S3 <sup>[<a href="https://myanimelist.net/anime/54857/Re_Zero_kara_Hajimeru_Isekai_Seikatsu_3rd_Season" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/163134/ReZero-kara-Hajimeru-Isekai-Seikatsu-3rd-Season/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
     
-    <li>Shoshimin: How to Become Ordinary [<a href="https://myanimelist.net/anime/57810/Shoushimin_Series" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/173295/Shoushimin-Series/" target="_blank" rel="noopener noreferrer">AniList</a>\]</li>
+    <li>Shoshimin: How to Become Ordinary <sup>[<a href="https://myanimelist.net/anime/57810/Shoushimin_Series" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/173295/Shoushimin-Series/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
     
 </ul>
 
@@ -365,17 +365,17 @@ published: true
 **Nominations**
 
 <ul className="grid grid-cols-1 md:grid-cols-2 gap-x-4 place-items-start">
-    <li>Mr Villain’s Day Off [<a href="https://myanimelist.net/anime/54617/Kyuujitsu_no_Warumono-san" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/162002/Kyuujitsu-no-Warumonosan/" target="_blank" rel="noopener noreferrer">AniList</a>\]</li>
+    <li>Mr Villain’s Day Off <sup>[<a href="https://myanimelist.net/anime/54617/Kyuujitsu_no_Warumono-san" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/162002/Kyuujitsu-no-Warumonosan/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
 
-    <li>Puniru is a Kawaii Slime [<a href="https://myanimelist.net/anime/57517/Puniru_wa_Kawaii_Slime" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/171400/Puniru-wa-Kawaii-Slime/" target="_blank" rel="noopener noreferrer">AniList</a>\]</li>
+    <li>Puniru is a Kawaii Slime <sup>[<a href="https://myanimelist.net/anime/57517/Puniru_wa_Kawaii_Slime" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/171400/Puniru-wa-Kawaii-Slime/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
     
-    <li>Yuru Camp S3 [<a href="https://myanimelist.net/anime/53410/Yuru_Camp△_Season_3" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/155908/Yuru-Camp-SEASON-3/" target="_blank" rel="noopener noreferrer">AniList</a>\]</li>
+    <li>Yuru Camp S3 <sup>[<a href="https://myanimelist.net/anime/53410/Yuru_Camp△_Season_3" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/155908/Yuru-Camp-SEASON-3/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
 
-    <li>Alya Sometimes Hides Her Feelings in Russian [<a href="https://myanimelist.net/anime/54744/Tokidoki_Bosotto_Russia-go_de_Dereru_Tonari_no_Alya-san" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/162804/Tokidoki-Bosotto-Russiago-de-Dereru-Tonari-no-Alyasan/" target="_blank" rel="noopener noreferrer">AniList</a>\]</li>
+    <li>Alya Sometimes Hides Her Feelings in Russian <sup>[<a href="https://myanimelist.net/anime/54744/Tokidoki_Bosotto_Russia-go_de_Dereru_Tonari_no_Alya-san" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/162804/Tokidoki-Bosotto-Russiago-de-Dereru-Tonari-no-Alyasan/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
 
-    <li>Natsume's Book of Friends S7 [<a href="https://myanimelist.net/anime/55823/Natsume_Yuujinchou_Shichi" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/166611/Natsume-Yuujinchou-Shichi/" target="_blank" rel="noopener noreferrer">AniList</a>\]</li>
+    <li>Natsume's Book of Friends S7 <sup>[<a href="https://myanimelist.net/anime/55823/Natsume_Yuujinchou_Shichi" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/166611/Natsume-Yuujinchou-Shichi/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
     
-    <li>Negative Positive Angler [<a href="https://myanimelist.net/anime/59425/NegaPosi_Angler" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/179919/NegaPosi-Angler/" target="_blank" rel="noopener noreferrer">AniList</a>\]</li>
+    <li>Negative Positive Angler <sup>[<a href="https://myanimelist.net/anime/59425/NegaPosi_Angler" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/179919/NegaPosi-Angler/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
     
 </ul>
 
@@ -396,17 +396,17 @@ published: true
 **Nominations**
 
 <ul className="grid grid-cols-1 md:grid-cols-2 gap-x-4 place-items-start">
-    <li>Dandadan [<a href="https://myanimelist.net/anime/57334/Dandadan" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/171018/Dandadan/" target="_blank" rel="noopener noreferrer">AniList</a>\]</li>
+    <li>Dandadan <sup>[<a href="https://myanimelist.net/anime/57334/Dandadan" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/171018/Dandadan/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
 
-    <li>Wind Breaker [<a href="https://myanimelist.net/anime/54900/Wind_Breaker" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/163270/WIND-BREAKER/" target="_blank" rel="noopener noreferrer">AniList</a>\]</li>
+    <li>Wind Breaker <sup>[<a href="https://myanimelist.net/anime/54900/Wind_Breaker" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/163270/WIND-BREAKER/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
     
-    <li>The Elusive Samurai [<a href="https://myanimelist.net/anime/54724/Nige_Jouzu_no_Wakagimi" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/162896/Nige-Jouzu-no-Wakagimi/" target="_blank" rel="noopener noreferrer">AniList</a>\]</li>
+    <li>The Elusive Samurai <sup>[<a href="https://myanimelist.net/anime/54724/Nige_Jouzu_no_Wakagimi" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/162896/Nige-Jouzu-no-Wakagimi/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
 
-    <li>Kaiju No. 8 [<a href="https://myanimelist.net/anime/52588/Kaijuu_8-gou" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/153288/Kaijuu-8gou/" target="_blank" rel="noopener noreferrer">AniList</a>\]</li>
+    <li>Kaiju No. 8 <sup>[<a href="https://myanimelist.net/anime/52588/Kaijuu_8-gou" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/153288/Kaijuu-8gou/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
 
-    <li>Solo Leveling [<a href="https://myanimelist.net/anime/52299/Ore_dake_Level_Up_na_Ken" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/151807/Ore-dake-Level-Up-na-Ken/" target="_blank" rel="noopener noreferrer">AniList</a>\]</li>
+    <li>Solo Leveling <sup>[<a href="https://myanimelist.net/anime/52299/Ore_dake_Level_Up_na_Ken" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/151807/Ore-dake-Level-Up-na-Ken/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
     
-    <li>Bleach: Thousand Year Blood War, Part 3 [<a href="https://myanimelist.net/anime/56784/Bleach__Sennen_Kessen-hen_-_Soukoku-tan" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/169755/BLEACH-Sennen-Kessenhen--Soukokutan/" target="_blank" rel="noopener noreferrer">AniList</a>\]</li>
+    <li>Bleach: Thousand Year Blood War, Part 3 <sup>[<a href="https://myanimelist.net/anime/56784/Bleach__Sennen_Kessen-hen_-_Soukoku-tan" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/169755/BLEACH-Sennen-Kessenhen--Soukokutan/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
     
 </ul>
 
@@ -427,17 +427,17 @@ published: true
 **Nominations**
 
 <ul className="grid grid-cols-1 md:grid-cols-2 gap-x-4 place-items-start">
-    <li>Blue Lock S2 [<a href="https://myanimelist.net/anime/54865/Blue_Lock_vs_U-20_Japan" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/163146/Blue-Lock-VS-U20-JAPAN/" target="_blank" rel="noopener noreferrer">AniList</a>\]</li>
+    <li>Blue Lock S2 <sup>[<a href="https://myanimelist.net/anime/54865/Blue_Lock_vs_U-20_Japan" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/163146/Blue-Lock-VS-U20-JAPAN/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
 
-    <li>Sound! Euphonium S3 [<a href="https://myanimelist.net/anime/39894/Hibike_Euphonium_3" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/109731/Hibike-Euphonium-3/" target="_blank" rel="noopener noreferrer">AniList</a>\]</li>
+    <li>Sound! Euphonium S3 <sup>[<a href="https://myanimelist.net/anime/39894/Hibike_Euphonium_3" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/109731/Hibike-Euphonium-3/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
     
-    <li>Girls Band Cry [<a href="https://myanimelist.net/anime/55102/Girls_Band_Cry" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/164212/GIRLS-BAND-CRY/" target="_blank" rel="noopener noreferrer">AniList</a>\]</li>
+    <li>Girls Band Cry <sup>[<a href="https://myanimelist.net/anime/55102/Girls_Band_Cry" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/164212/GIRLS-BAND-CRY/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
 
-    <li>Oi! Tonbo [<a href="https://myanimelist.net/anime/55194/Ooi_Tonbo" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/164440/Ooi-Tonbo/" target="_blank" rel="noopener noreferrer">AniList</a>\]</li>
+    <li>Oi! Tonbo <sup>[<a href="https://myanimelist.net/anime/55194/Ooi_Tonbo" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/164440/Ooi-Tonbo/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
 
-    <li>Na Nare Hana Nare [<a href="https://myanimelist.net/anime/57099/Na_Nare_Hana_Nare" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/170891/NaNare-HanaNare/" target="_blank" rel="noopener noreferrer">AniList</a>\]</li>
+    <li>Na Nare Hana Nare <sup>[<a href="https://myanimelist.net/anime/57099/Na_Nare_Hana_Nare" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/170891/NaNare-HanaNare/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
     
-    <li>Oblivion Battery [<a href="https://myanimelist.net/anime/56165/Boukyaku_Battery_TV" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/167927/Boukyaku-Battery-TV/" target="_blank" rel="noopener noreferrer">AniList</a>\]</li>
+    <li>Oblivion Battery <sup>[<a href="https://myanimelist.net/anime/56165/Boukyaku_Battery_TV" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/167927/Boukyaku-Battery-TV/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
     
 </ul>
 
@@ -458,17 +458,17 @@ published: true
 **Nominations**
 
 <ul className="grid grid-cols-1 md:grid-cols-2 gap-x-4 place-items-start">
-    <li>Days with My Stepsister [<a href="https://myanimelist.net/anime/52481/Gimai_Seikatsu" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/152681/Gimai-Seikatsu/" target="_blank" rel="noopener noreferrer">AniList</a>\]</li>
+    <li>Days with My Stepsister <sup>[<a href="https://myanimelist.net/anime/52481/Gimai_Seikatsu" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/152681/Gimai-Seikatsu/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
 
-    <li>Sound! Euphonium S3 [<a href="https://myanimelist.net/anime/39894/Hibike_Euphonium_3" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/109731/Hibike-Euphonium-3/" target="_blank" rel="noopener noreferrer">AniList</a>\]</li>
+    <li>Sound! Euphonium S3 <sup>[<a href="https://myanimelist.net/anime/39894/Hibike_Euphonium_3" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/109731/Hibike-Euphonium-3/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
     
-    <li>Jellyfish Can’t Swim in the Night [<a href="https://myanimelist.net/anime/54839/Yoru_no_Kurage_wa_Oyogenai" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/163078/Yoru-no-Kurage-wa-Oyogenai/" target="_blank" rel="noopener noreferrer">AniList</a>\]</li>
+    <li>Jellyfish Can’t Swim in the Night <sup>[<a href="https://myanimelist.net/anime/54839/Yoru_no_Kurage_wa_Oyogenai" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/163078/Yoru-no-Kurage-wa-Oyogenai/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
 
-    <li>TsumaSho [<a href="https://myanimelist.net/anime/54726/Tsuma_Shougakusei_ni_Naru" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/162785/Tsuma-Shougakusei-ni-Naru/" target="_blank" rel="noopener noreferrer">AniList</a>\]</li>
+    <li>TsumaSho <sup>[<a href="https://myanimelist.net/anime/54726/Tsuma_Shougakusei_ni_Naru" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/162785/Tsuma-Shougakusei-ni-Naru/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
 
-    <li>Oshi no Ko S2 [<a href="https://myanimelist.net/anime/55791/Oshi_no_Ko_2nd_Season" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/166531/Oshi-no-Ko-2nd-Season/" target="_blank" rel="noopener noreferrer">AniList</a>\]</li>
+    <li>Oshi no Ko S2 <sup>[<a href="https://myanimelist.net/anime/55791/Oshi_no_Ko_2nd_Season" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/166531/Oshi-no-Ko-2nd-Season/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
     
-    <li>Yatagarasu [<a href="https://myanimelist.net/anime/56980/Karasu_wa_Aruji_wo_Erabanai" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/170503/Karasu-wa-Aruji-wo-Erabanai/" target="_blank" rel="noopener noreferrer">AniList</a>\]</li>
+    <li>Yatagarasu <sup>[<a href="https://myanimelist.net/anime/56980/Karasu_wa_Aruji_wo_Erabanai" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/170503/Karasu-wa-Aruji-wo-Erabanai/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
     
 </ul>
 
@@ -489,17 +489,17 @@ published: true
 **Nominations**
 
 <ul className="grid grid-cols-1 md:grid-cols-2 gap-x-4 place-items-start">
-    <li>A Sign of Affection [<a href="https://myanimelist.net/anime/55866/Yubisaki_to_Renren" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/166794/Yubisaki-to-Renren/" target="_blank" rel="noopener noreferrer">AniList</a>\]</li>
+    <li>A Sign of Affection <sup>[<a href="https://myanimelist.net/anime/55866/Yubisaki_to_Renren" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/166794/Yubisaki-to-Renren/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
 
-    <li>Pseudo Harem [<a href="https://myanimelist.net/anime/54968/Giji_Harem" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/163623/Giji-Harem/" target="_blank" rel="noopener noreferrer">AniList</a>\]</li>
+    <li>Pseudo Harem <sup>[<a href="https://myanimelist.net/anime/54968/Giji_Harem" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/163623/Giji-Harem/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
     
-    <li>Kimi ni Todoke S3 [<a href="https://myanimelist.net/anime/56538/Kimi_ni_Todoke_3rd_Season" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/168872/Kimi-ni-Todoke-3RD-SEASON/" target="_blank" rel="noopener noreferrer">AniList</a>\]</li>
+    <li>Kimi ni Todoke S3 <sup>[<a href="https://myanimelist.net/anime/56538/Kimi_ni_Todoke_3rd_Season" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/168872/Kimi-ni-Todoke-3RD-SEASON/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
 
-    <li>The Dangers in My Heart S2 [<a href="https://myanimelist.net/anime/55690/Boku_no_Kokoro_no_Yabai_Yatsu_2nd_Season" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/166216/Boku-no-Kokoro-no-Yabai-Yatsu-2nd-Season/" target="_blank" rel="noopener noreferrer">AniList</a>\]</li>
+    <li>The Dangers in My Heart S2 <sup>[<a href="https://myanimelist.net/anime/55690/Boku_no_Kokoro_no_Yabai_Yatsu_2nd_Season" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/166216/Boku-no-Kokoro-no-Yabai-Yatsu-2nd-Season/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
 
-    <li>Yakuza Fiancé [<a href="https://myanimelist.net/anime/56964/Raise_wa_Tanin_ga_Ii" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/170468/Raise-wa-Tanin-ga-Ii/" target="_blank" rel="noopener noreferrer">AniList</a>\]</li>
+    <li>Yakuza Fiancé <sup>[<a href="https://myanimelist.net/anime/56964/Raise_wa_Tanin_ga_Ii" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/170468/Raise-wa-Tanin-ga-Ii/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
     
-    <li>Blue Box [<a href="https://myanimelist.net/anime/57181/Ao_no_Hako" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/170942/Ao-no-Hako/" target="_blank" rel="noopener noreferrer">AniList</a>\]</li>
+    <li>Blue Box <sup>[<a href="https://myanimelist.net/anime/57181/Ao_no_Hako" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/170942/Ao-no-Hako/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
     
 </ul>
 
@@ -520,17 +520,17 @@ published: true
 **Nominations**
 
 <ul className="grid grid-cols-1 md:grid-cols-2 gap-x-4 place-items-start">
-    <li>Too Many Losing Heroines [<a href="https://myanimelist.net/anime/57524/Make_Heroine_ga_Oosugiru" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/171457/Make-Heroine-ga-Oosugiru/" target="_blank" rel="noopener noreferrer">AniList</a>\]</li>
+    <li>Too Many Losing Heroines <sup>[<a href="https://myanimelist.net/anime/57524/Make_Heroine_ga_Oosugiru" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/171457/Make-Heroine-ga-Oosugiru/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
 
-    <li>Ranma ½ [<a href="https://myanimelist.net/anime/59145/Ranma_½_2024" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/178533/Ranma-12-2024/" target="_blank" rel="noopener noreferrer">AniList</a>\]</li>
+    <li>Ranma ½ <sup>[<a href="https://myanimelist.net/anime/59145/Ranma_½_2024" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/178533/Ranma-12-2024/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
     
-    <li>‘Tis Time for “Torture”, Princess [<a href="https://myanimelist.net/anime/55774/Himesama_Goumon_no_Jikan_desu" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/166522/Himesama-Goumon-no-Jikan-desu/" target="_blank" rel="noopener noreferrer">AniList</a>\]</li>
+    <li>‘Tis Time for “Torture”, Princess <sup>[<a href="https://myanimelist.net/anime/55774/Himesama_Goumon_no_Jikan_desu" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/166522/Himesama-Goumon-no-Jikan-desu/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
 
-    <li>Mashle S2 [<a href="https://myanimelist.net/anime/55813/Mashle__Shinkakusha_Kouho_Senbatsu_Shiken-hen" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/166610/MASHLE-Kami-Shinkakusha-Kouho-Senbatsu-Shikenhen/" target="_blank" rel="noopener noreferrer">AniList</a>\]</li>
+    <li>Mashle S2 <sup>[<a href="https://myanimelist.net/anime/55813/Mashle__Shinkakusha_Kouho_Senbatsu_Shiken-hen" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/166610/MASHLE-Kami-Shinkakusha-Kouho-Senbatsu-Shikenhen/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
 
-    <li>My Deer Friend Nokotan [<a href="https://myanimelist.net/anime/58426/Shikanoko_Nokonoko_Koshitantan" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/175977/Shikanoko-Nokonoko-Koshitantan/" target="_blank" rel="noopener noreferrer">AniList</a>\]</li>
+    <li>My Deer Friend Nokotan <sup>[<a href="https://myanimelist.net/anime/58426/Shikanoko_Nokonoko_Koshitantan" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/175977/Shikanoko-Nokonoko-Koshitantan/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
     
-    <li>VTuber Legend [<a href="https://myanimelist.net/anime/54284/VTuber_Nandaga_Haishin_Kiri_Wasuretara_Densetsu_ni_Natteta" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/160488/VTuber-nanda-ga-Haishin-Kiri-Wasuretara-Densetsu-ni-Natteta/" target="_blank" rel="noopener noreferrer">AniList</a>\]</li>
+    <li>VTuber Legend <sup>[<a href="https://myanimelist.net/anime/54284/VTuber_Nandaga_Haishin_Kiri_Wasuretara_Densetsu_ni_Natteta" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/160488/VTuber-nanda-ga-Haishin-Kiri-Wasuretara-Densetsu-ni-Natteta/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
     
 </ul>
 
@@ -551,17 +551,17 @@ published: true
 **Nominations**
 
 <ul className="grid grid-cols-1 md:grid-cols-2 gap-x-4 place-items-start">
-    <li>Demon Lord 2099 [<a href="https://myanimelist.net/anime/54853/Maou_2099" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/163135/Maou-2099/" target="_blank" rel="noopener noreferrer">AniList</a>\]</li>
+    <li>Demon Lord 2099 <sup>[<a href="https://myanimelist.net/anime/54853/Maou_2099" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/163135/Maou-2099/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
 
-    <li>Train to the End of the World [<a href="https://myanimelist.net/anime/53356/Shuumatsu_Train_Doko_e_Iku" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/155657/Shuumatsu-Train-Doko-e-Iku/" target="_blank" rel="noopener noreferrer">AniList</a>\]</li>
+    <li>Train to the End of the World <sup>[<a href="https://myanimelist.net/anime/53356/Shuumatsu_Train_Doko_e_Iku" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/155657/Shuumatsu-Train-Doko-e-Iku/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
     
-    <li>Brave Bang Bravern [<a href="https://myanimelist.net/anime/55528/Yuuki_Bakuhatsu_Bang_Bravern" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/165598/Yuuki-Bakuhatsu-Bang-Bravern/" target="_blank" rel="noopener noreferrer">AniList</a>\]</li>
+    <li>Brave Bang Bravern <sup>[<a href="https://myanimelist.net/anime/55528/Yuuki_Bakuhatsu_Bang_Bravern" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/165598/Yuuki-Bakuhatsu-Bang-Bravern/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
 
-    <li>NieR: Automata Ver1.1a Part 2 [<a href="https://myanimelist.net/anime/56063/NieR_Automata_Ver11a_Part_2" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/167420/NieRAutomata-Ver11a-2nd-Season/" target="_blank" rel="noopener noreferrer">AniList</a>\]</li>
+    <li>NieR: Automata Ver1.1a Part 2 <sup>[<a href="https://myanimelist.net/anime/56063/NieR_Automata_Ver11a_Part_2" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/167420/NieRAutomata-Ver11a-2nd-Season/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
 
-    <li>Code Geass: Rozé  of the Recapture [<a href="https://myanimelist.net/anime/56835/Code_Geass__Dakkan_no_Rozé" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/126830/Code-Geass-Dakkan-no-Roz/" target="_blank" rel="noopener noreferrer">AniList</a>\]</li>
+    <li>Code Geass: Rozé  of the Recapture <sup>[<a href="https://myanimelist.net/anime/56835/Code_Geass__Dakkan_no_Rozé" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/126830/Code-Geass-Dakkan-no-Roz/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
     
-    <li>Dead Dead Demon’s Dededededestruction [<a href="https://myanimelist.net/anime/58883/Dead_Dead_Demons_Dededede_Destruction_ONA" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/177697/Dead-Dead-Demons-Dededededestruction/" target="_blank" rel="noopener noreferrer">AniList</a>\]</li>
+    <li>Dead Dead Demon’s Dededededestruction <sup>[<a href="https://myanimelist.net/anime/58883/Dead_Dead_Demons_Dededede_Destruction_ONA" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/177697/Dead-Dead-Demons-Dededededestruction/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
     
 </ul>
 
@@ -582,17 +582,17 @@ published: true
 **Nominations**
 
 <ul className="grid grid-cols-1 md:grid-cols-2 gap-x-4 place-items-start">
-    <li>7th Time Loop [<a href="https://myanimelist.net/anime/56352/Loop_7-kaime_no_Akuyaku_Reijou_wa_Moto_Tekikoku_de_Jiyuu_Kimama_na_Hanayome_Seikatsu_wo_Mankitsu_suru" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/168374/Loop-7kaime-no-Akuyaku-Reijou-wa-Moto-Tekikoku-de-Jiyuu-Kimama-na-Hanayome-Seikatsu-wo-Mankitsu-Suru/" target="_blank" rel="noopener noreferrer">AniList</a>\]</li>
+    <li>7th Time Loop <sup>[<a href="https://myanimelist.net/anime/56352/Loop_7-kaime_no_Akuyaku_Reijou_wa_Moto_Tekikoku_de_Jiyuu_Kimama_na_Hanayome_Seikatsu_wo_Mankitsu_suru" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/168374/Loop-7kaime-no-Akuyaku-Reijou-wa-Moto-Tekikoku-de-Jiyuu-Kimama-na-Hanayome-Seikatsu-wo-Mankitsu-Suru/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
 
-    <li>Delicious in Dungeon [<a href="https://myanimelist.net/anime/52701/Dungeon_Meshi" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/153518/Dungeon-Meshi/" target="_blank" rel="noopener noreferrer">AniList</a>\]</li>
+    <li>Delicious in Dungeon <sup>[<a href="https://myanimelist.net/anime/52701/Dungeon_Meshi" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/153518/Dungeon-Meshi/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
     
-    <li>Sengoku Youko [<a href="https://myanimelist.net/anime/56242/Sengoku_Youko__Yonaoshi_Kyoudai-hen" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/168194/Sengoku-Youko/" target="_blank" rel="noopener noreferrer">AniList</a>\]</li>
+    <li>Sengoku Youko <sup>[<a href="https://myanimelist.net/anime/56242/Sengoku_Youko__Yonaoshi_Kyoudai-hen" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/168194/Sengoku-Youko/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
 
-    <li>Spice & Wolf [<a href="https://myanimelist.net/anime/51122/Ookami_to_Koushinryou__Merchant_Meets_the_Wise_Wolf" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/145728/Ookami-to-Koushinryou-MERCHANT-MEETS-THE-WISE-WOLF/" target="_blank" rel="noopener noreferrer">AniList</a>\]</li>
+    <li>Spice & Wolf <sup>[<a href="https://myanimelist.net/anime/51122/Ookami_to_Koushinryou__Merchant_Meets_the_Wise_Wolf" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/145728/Ookami-to-Koushinryou-MERCHANT-MEETS-THE-WISE-WOLF/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
 
-    <li>Wistoria: Wand and Sword [<a href="https://myanimelist.net/anime/58059/Tsue_to_Tsurugi_no_Wistoria" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/174576/Tsue-to-Tsurugi-no-Wistoria/" target="_blank" rel="noopener noreferrer">AniList</a>\]</li>
+    <li>Wistoria: Wand and Sword <sup>[<a href="https://myanimelist.net/anime/58059/Tsue_to_Tsurugi_no_Wistoria" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/174576/Tsue-to-Tsurugi-no-Wistoria/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
     
-    <li>Yatagarasu [<a href="https://myanimelist.net/anime/56980/Karasu_wa_Aruji_wo_Erabanai" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/170503/Karasu-wa-Aruji-wo-Erabanai/" target="_blank" rel="noopener noreferrer">AniList</a>\]</li>
+    <li>Yatagarasu <sup>[<a href="https://myanimelist.net/anime/56980/Karasu_wa_Aruji_wo_Erabanai" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/170503/Karasu-wa-Aruji-wo-Erabanai/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
     
 </ul>
 
