Minor text changes

--- a/content/blog/bacademy-awards-2025.mdx
+++ b/content/blog/bacademy-awards-2025.mdx
@@ -1,5 +1,5 @@
 ---
-title: 1st BACademy Awards 2025
+title: BACademy Awards 2025
 description: The first BACademy Awards edition for anime and manga
 date: 2025-03-02
 tags: ["anime", "manga", "bacademy awards"]
@@ -17,8 +17,6 @@ published: true
 
 - [Nomination and Award Process](#nomination-and-award-process)
 - [Nomination Rules and Considerations](#nomination-rules-and-considerations)
-
-**Categories**
 
 <div className="grid grid-cols-1 md:grid-cols-2 my-0 place-items-start -mt-5 -mb-3">
   <div>
